finished captions and final touches

--- a/animals.html
+++ b/animals.html
@@ -33,59 +33,47 @@
 
       <div class="gallery">
         <div class = "cimg">
-            <a target="_blank" href="img/sifakaaltered.jpg">
               <img src="img/sifakaaltered.jpg" alt="Sifaka" class="gimg">
-            </a>
         </div>
-        <div class="desc">Sifaka live in Madagascar and hop through trees finding good leaves to eat.
+        <div class="desc">Sifaka are lemurs that live in Madagascar. They rely on tree leaves for food, and will hop and climb their way through trees and dangerous rocky terrain in search of good trees.
         </div>
       </div>
 
       <div class="gallery">
         <div class="cimg">
-          <a target="_blank" href="img/bettaalteredsize.jpg">
             <img src="img/bettaalteredsize.jpg" alt="Betta" class="gimg">
-          </a>
         </div>
-        <div class="desc">Male Siamese fighting fish create bubble nests at the surface of freshwater and carry their eggs in their mouths to place them into the nests.
+        <div class="desc">Male Siamese fighting fish create bubble nests at the surface of freshwater. They carry their partner's sinking eggs in their mouths and place them into the nests.
         </div>
       </div>
 
       <div class="gallery">
         <div class="cimg">
-          <a target="_blank" href="img/PikaAltered.jpg">
             <img src="img/PikaAltered.jpg" alt="Pika" class="gimg">
-          </a> 
         </div>
-        <div class="desc">Pika are....
+        <div class="desc">Pika are small mammals that live in burrows or crevices in rocky mountain habitats. They require cool temperatures to live, so increasing global temperatures have forced them to higher, limited elevations.
         </div>
       </div>
     
       <div class="gallery">
         <div class="cimg">
-          <a target="_blank" href="img/SeaSlugSquare.jpg">
             <img src="img/SeaSlugSquare.jpg" alt="Sea Slug" class="gimg">
-          </a> 
         </div>
-        <div class="desc">Sea slugs are....
+        <div class="desc">Sea slugs are sea snails who evolutionarily lost their shells. They have tentacles on their head for smelling, rudimentary eyes, and gills on their back. They tend to be semi-translucent and have vibrant colors to ward off predators.
         </div>
       </div>
 
       <div class="gallery">
         <div class="cimg">
-          <a target="_blank" href="img/MaleGemsbokSquare.jpg">
             <img src="img/MaleGemsbokSquare.jpg" alt="Gemsbok" class="gimg">
-          </a> 
         </div>
-        <div class="desc">Gemsbok are....
+        <div class="desc">Gemsbok are antelopes that Southern, arid regions in Africa. They are adapted to get water from what they eat rather than relying on drinking water. 
         </div>
       </div>
 
       <div class="gallery">
         <div class="cimg">
-           <a target="_blank" href="img/LeafInsect.jpg">
             <img src="img/LeafInsect.jpg" alt="Leaf Insect" class="gimg">
-          </a> 
         </div>
         <div class="desc">Leaf insects not only blend in with leaves through form and color, but they also shake when they move to mimic rustling leaves.
         </div>
