--- a/forms.html
+++ b/forms.html
@@ -33,11 +33,9 @@
 
         <div class="gallery">
             <div class = "cimg">
-                <a target="_blank" href="img/WeloOpal.jpg">
                     <img src="img/WeloOpal.jpg" alt="Ethiopian Welo Opal" class="gimg">
-                </a>
             </div>
-            <div class="desc">Ethiopian Welo opal reflects light in honeycomb-like shapes.
+            <div class="desc">Ethiopian Welo opals form from volcanic activity high in the mountains. The honeycomb variety is the rarest, created from "web-like inclusions" that the opal formed on top of. 
             </div>
         </div>
 
@@ -45,28 +43,24 @@
             <div class="cimg">
                 <img src="img/Dallol.jpeg" alt="Dallol" class="gimg">
             </div>
-            <div class="desc">Cool place in Ethiopia.
+            <div class="desc">Dallol is a volcano and series of acid lakes in Ethiopia. Its vibrant colors and pristine lakes make it attracting, but it is a toxic place that should only be visited for a short period.
             </div>
         </div>
 
         <div class="gallery">
             <div class="cimg">
-                <a target="_blank" href="img/MossAgate.jpg">
                     <img src="img/MossAgate.jpg" alt="Moss Agate" class="gimg">
-                </a>
             </div>
-            <div class="desc"><p>Indonesian moss agate, made from volcanic rock. The "moss" are metal impurities.</p>
+            <div class="desc">Indonesian moss agate is made from volcanic rock. The "moss" are metal impurities producing different colors depending on the metal's valence.
                 <p>Photographer: Chille Maulidhaa</p>
             </div>
         </div>
 
         <div class="gallery">
             <div class="cimg">
-                <a target="_blank" href="img/MethaneBubbles.jpg">
                     <img src="img/MethaneBubbles.jpg" alt="Methane Bubbles" class="gimg">
-                </a>
             </div>
-            <div class="desc">Frozen methane bubbles are captured in Lake Baikal. It sits over a rift zone, which is a crack in Earth's crust.
+            <div class="desc">Methane bubbles can be viewed in Lake Baikal, frozen in the ice. The lake sits over a rift zone, which is a crack in Earth's crust.
             </div>
         </div>
 
@@ -74,7 +68,7 @@
             <div class="cimg">
                     <img src="img/TentRocks.jpg" alt="Tent Rocks" class="gimg">
             </div>
-            <div class="desc">Tent Rocks are....
+            <div class="desc">Tent Rocks were formed after a series of volcanic eruptions, which resulted in more than 1,000 feet of volcanic ash build up. Harder rock forms were unevenly distributed at the top of the ash, resulting in them remaining intact while the volcanic ash eroded away to form cones, with the harder forms that their peaks. 
             </div>
         </div>
 
@@ -82,7 +76,7 @@
             <div class="cimg">
                     <img src="img/CarlsbadCaverns.jpg" alt="Carlsbad Caverns" class="gimg">
             </div>
-            <div class="desc">Carlsbad Caverns are....
+            <div class="desc">Carlsbad Caverns are a set of dozens of caves in New Mexico. It has stalagmites and stalactites among other formations, and its biggest chamber, "The Big Room," is the biggest in North America.
             </div>
         </div>
         
