--- a/plants.html
+++ b/plants.html
@@ -35,7 +35,7 @@
             <div class = "cimg">
                 <img src="img/BaobabTree.jpg" alt="Baobab" class="gimg">
             </div>
-            <div class="desc">Baobab trees are a Madagascar tree that is excellent at storing water.
+            <div class="desc">Baobab trees are Madagascar trees that produce nutrient-rich fruit. They are adapted to store water in their trunks during the dry season, and humans have cut hollows in them that can be used as wells for rainwater collection.
             </div>
         </div>
 
@@ -43,47 +43,39 @@
             <div class="cimg">
                     <img src="img/AspenTree.jpg" alt="Aspen" class="gimg">
             </div>
-            <div class="desc">Why are their trunks like that? So cool.
+            <div class="desc">Aspen trees' trunks are capable of photosynthesis, allowing some growth during the winter. They reproduce through "sprouting," where clones of themselves emerge from their roots.
             </div>
         </div>
 
         <div class="gallery">
             <div class="cimg">
-                <a target="_blank" href="img/Milkweed.jpg">
                     <img src="img/Milkweed.jpg" alt="Milkweed" class="gimg">
-                </a>
             </div>
-            <div class="desc">Milkweeds are great medicinal plants.
+            <div class="desc">Milkweeds have a milky sap in their stems that is bitter and toxic. However, the milky sap, as well as other parts of the plant, have been traditionally used as various medicines and food. Monarch caterpillars rely on the plant.
             </div>
         </div>
 
         <div class="gallery">
             <div class="cimg">
-                <a target="_blank" href="img/Ixora.jpg">
                     <img src="img/Ixora.jpg" alt="Ixora" class="gimg">
-                </a>
             </div>
-            <div class="desc">Ixora have a sweet nectar on its stem that you can suck on after gently pulling it from the flower's base.
+            <div class="desc">Ixora have a sweet nectar on their stems that you can suck on. Gently pull the stem from the flower's base.
             </div>
         </div>
 
         <div class="gallery">
             <div class="cimg">
-                <a target="_blank" href="img/Rambutan.jpg">
                     <img src="img/Rambutan.jpg" alt="Rambutan" class="gimg">
-                </a>
             </div>
-            <div class="desc">Yummy lychee fruit I grew up with.
+            <div class="desc">Rambutan is a tropical Asian fruit that is noted for its harmless, hair-like spines called spinterns. The inside resembles lychee with a seed at the center, but it tastes more like a grape.
             </div>
         </div>
 
         <div class="gallery">
             <div class="cimg">
-                <a target="_blank" href="img/GiantLilyPads.jpg">
                     <img src="img/GiantLilyPads.jpg" alt="Giant Lily Pads" class="gimg">
-                </a>
             </div>
-            <div class="desc">Giant lily pads are capable of carrying a adult human due to their vein structure.
+            <div class="desc">Giant lily pads are capable of carrying a person over water. This is due to their vein structure, which froms "ribs" that trap air underneath it.
             </div>
         </div>
 
