--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="img/BaobabTree.png" alt="Plant Photo" class="indeximg">
             <h2>Plants</h2>
             <div class="caption">
-            <p>Water-storing trees to medicinal herbs</p>
+            <p>Lots of these plants have ties to humans, either through consumption or use of their forms.</p>
             <p><a href="plants.html" class="button1">Go</a></p>
         </div> 
         </div>
@@ -48,7 +48,7 @@
             <img src="img/GemsbokAltered.png" alt="Animal Photo" class="indeximg">
             <h2>Animals</h2>
             <div class="caption">
-                <p>Water, land, and air creatures</p>
+                <p>Some have incredible adaptations, and some are just plain cute.</p>
                 <p><a href="animals.html" class="button1">Go</a></p>
                 </div>
         </div>
@@ -56,7 +56,7 @@
             <img src="img/OpalAltered.png" alt="Form Photo" class="indeximg">
             <h2>Forms</h2>
             <div class="caption">
-            <p>Gemstones to unique environments</p>
+            <p>A collection of my favorite gemstones and places with unique formations.</p>
             <p><a href="forms.html" class="button1">Go</a></p>
             </div>
         </div>
