changed up it to be better

--- a/ICA/8/ica8.html
+++ b/ICA/8/ica8.html
@@ -9,11 +9,11 @@
     <title>ICA 8</title>
 </head>
 <body>
-    <p>What is your favorite color?</p>
+    <p>Do you like blue or orange?</p>
 
 
 
-<p id="psize">i want to be bigger</p>
+<p id="psize">I deserve to be a bit bigger than this.</p>
 
 
 
