--- a/Assignments/A8SillyStory/assignment8.html
+++ b/Assignments/A8SillyStory/assignment8.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width">
 
     <title>Silly story generator</title>
-   <!-- <link rel="stylesheet" href="../../css/styles.css"> -->
+   <link rel="stylesheet" href="../../css/styles.css"> 
     <script defer src="a8.js"></script>
     <style>
 
     body {
-      font-family: helvetica, sans-serif;
       width: 350px;
     }
 
@@ -28,12 +27,7 @@
       width: 150px;
     }
 
-    p {
-      background: #FFC125;
-      color: #5E2612;
-      padding: 10px;
-      visibility: hidden;
-    }
+ 
 
     </style>
   </head>
