--- a/Assignments/A9ImageCarousel/assignment9.html
+++ b/Assignments/A9ImageCarousel/assignment9.html
@@ -6,7 +6,7 @@
     <title>Image gallery</title>
 
     <link rel="stylesheet" href="style.css">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
   </head>
 
   <body>
