--- a/Readings/oojs.html
+++ b/Readings/oojs.html
@@ -107,7 +107,8 @@ person.farewell = function () {
   console.log("Bye everybody!");
 };
 
-constructors = functions?*/
+https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Objects/Object-oriented_programming
+constructors = function that allows instances to be created from it (new object from class)*/
 
     </script>
 </html>
