--- a/ReadingQuiz/quiz10.html
+++ b/ReadingQuiz/quiz10.html
@@ -43,18 +43,24 @@
       let male = 0;
 
       // Add your code here
-      JSON.parse(catString); /*converting json to object after making it text*/
+      JSON.parse(text); /*converting json to object after making it text*/
+      const mothers = catString.members;
       for (const mother of mothers) {
-        const mom = catString[0]['name'];
-        para1.textContent = `${name}, `;}
-        motherInfo + para1.textContent
-        const kittens = cats.kittens;
+        motherInfo += `${mother.name}, `;
+        const kittens = [0]
         for (const kitten of kittens) {
+
+      }
+        /*for (const kitten of kittens) {
             motherInfo
+            const kittens = cats.kittens;
       kittenInfo
 
       mother.textContent = mother.textContent.slice(0,mother.textContent.length-2) + '.';
 
+      catString = JSON.parse(catString); /* const cats = JSON.parse(catString); didn't work */
+      
+    
 
       /*fill in the missing parts of the displayCatInfo()function to store:
 
