--- a/Assignments/A11QuoteMachine/assignment11.html
+++ b/Assignments/A11QuoteMachine/assignment11.html
@@ -13,7 +13,7 @@
     <div class="app">
         <header>Random User</header>
         <section class="quotes" id="imagespecific">
-            <img src="" alt="">
+            <img src="https://randomuser.me/api/portraits/women/35.jpg" alt="">
           </section>
         <section class="quotes">
           <div class="quote-text" id="js-quote-text"></div>
