--- a/Assignments/A11QuoteMachine/assignment11.html
+++ b/Assignments/A11QuoteMachine/assignment11.html
@@ -25,7 +25,7 @@
             <div class="age-text" id="js-age-text"></div>
           </section>
         <section class="controls">
-          <button type="button" id="js-new-quote" class="new-quote button"> <!--has two classes on it: new-quote and button-->
+          <button type="button" class="button"> <!--has two classes on it: new-quote and button-->
             Generate a new user
           </button>
         </section>
