made some changes

--- a/Assignments/A11QuoteMachine/assignment11.html
+++ b/Assignments/A11QuoteMachine/assignment11.html
@@ -16,7 +16,7 @@
             <img src="https://randomuser.me/api/portraits/women/35.jpg" alt="">
           </section>
         <section class="quotes">
-          <div class="quote-text" id="js-quote-text"></div>
+          <div class="quote-text" id="js-name-text"></div>
         </section>
         <section class="quotes">
             <div class="username-text" id="js-username-text"></div>
