--- a/Assignments/A11QuoteMachine/assignment11.html
+++ b/Assignments/A11QuoteMachine/assignment11.html
@@ -10,7 +10,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="app">
+  <div class = "wholething">  
+  <div class="app">
         <header>Random User</header>
         <section class="quotes" id="imagespecific">
             <img src="https://randomuser.me/api/portraits/women/35.jpg" alt="">
@@ -30,5 +31,9 @@
           </button>
         </section>
       </div>
+      <div class = "explanation">
+        <p>The extension that I did for this assignment was to pull from multiple different parts of the API's JSON and display them with each button click. I displayed the names and age of each randomly generated user, as well as the image associated with each. This involved creating multiple new sections and creating code that changed the HTML's image source and alt text. </p>
+      </div>
+    </div>
 </body>
 </html>
