don't know why its not working

--- a/Assignments/A12BadlyDesignedForm/assignment12.html
+++ b/Assignments/A12BadlyDesignedForm/assignment12.html
@@ -34,17 +34,27 @@
         <p>Please enter your phone number. Each missed spin will cost $10 and each win will bring $15.</p>
         <p class="output">___-___-____</p>
     </div>
-    <form>
-    <input class="spin-button" type="button" name="spin-button" value="Cash in and Spin" disabled>
-    <input class="correct-button" type="button" name="correct-button" value="Right Number" disabled>
-    </form>
-    <canvas></canvas>
-    <div>
+    <div id="mainbox" class="mainbox">
+        <div id="circle" class="circle">
+            <div class="number number1">1</div>
+            <div class="number number2">2</div>
+            <div class="number number3">3</div>
+            <div class="number number4">4</div>
+            <div class="number number5">5</div>
+            <div class="number number6">6</div>
+            <div class="number number7">7</div>
+            <div class="number number8">8</div>
+            <div class="number number9">9</div>
+        </div>
+        <input class="spin-button" type="button" name="spin-button" value="Cash in and Spin" disabled>
+    </div>
+        <form>
+            <input class="correct-button" type="button" name="correct-button" value="Right Number" disabled>
+            </form>
         <p>You owe us this much: </p>
         <p class ="lost-money">0</p>
         <p>You won this much: </p>
         <p class ="gained-money">0</p>
-    </div>
 
     <p>Kerstin Nyquist</p>
     </body>
