why not working

--- a/Assignments/A12BadlyDesignedForm/assignment12.html
+++ b/Assignments/A12BadlyDesignedForm/assignment12.html
@@ -37,9 +37,10 @@
         <p class="output">___-___-____</p>
     </div>
     <div id="mainbox">
-        <div class="hand" id="hand"></div>
+        <div class="arrow" id="arrow"></div>
         <div id="circle" class="circle">
-            <div id="circle2"></div>
+            <img src="Spinner.png" alt="spin the wheel" id="spinner" width="300px">
+          <!-- <div id="circle2"></div>
             <div class="number" id="number0">0</div>
             <div class="number" id="separate1">|</div>
             <div class="number" id="number1">1</div>
@@ -59,18 +60,15 @@
             <div class="number" id="number8">8</div>
             <div class="number" id="separate9">|</div>
             <div class="number" id="number9">9</div>
-            <div class="number" id="separate10">|</div>
+            <div class="number" id="separate10">|</div> --> 
             <input class="spin-button" type="button" name="spin-button" value="Spin" disabled>
         </div>
     </div>
         <form>
             <input class="correct-button" type="button" name="correct-button" value="Right Number" disabled>
             </form>
-        <p>You owe us this much: </p>
-        <p class ="lost-money">0</p>
-        <p>You won this much: </p>
-        <p class ="gained-money">0</p>
-
+        <p>You owe us this much: <strong>$</strong><strong class="lost-money">0</strong></p>
+        <p>You won this much: <strong>$</strong><strong class="gained-money">0</strong></p>
     <p>Kerstin Nyquist</p>
     </body>
 </html>
