idk why this isn't working

--- a/Assignments/A12BadlyDesignedForm/assignment12.html
+++ b/Assignments/A12BadlyDesignedForm/assignment12.html
@@ -39,7 +39,7 @@
     <div id="mainbox">
         <div class="arrow" id="arrow"></div>
         <div id="circle" class="circle">
-            <img src="Spinner.png" alt="spin the wheel" id="spinner" width="300px">
+            <img src="Spinner.png" alt="spin the wheel" id="spinner" width="300">
           <!-- <div id="circle2"></div>
             <div class="number" id="number0">0</div>
             <div class="number" id="separate1">|</div>
