--- a/Assignments/A12BadlyDesignedForm/assignment12.html
+++ b/Assignments/A12BadlyDesignedForm/assignment12.html
@@ -34,7 +34,7 @@
     <div>
         <p>Please enter your phone number. Each missed spin will cost $10 and each win will bring $15.</p>
         <p><em>Note: We will call you for verification.</em></p>
-        <p class="output">___-___-____</p>
+        <p class="output">Phone Number: <strong class="output"></strong></p>
     </div>
     <div id="mainbox">
         <div class="arrow" id="arrow"></div>
