--- a/Assignments/A12BadlyDesignedForm/assignment12.html
+++ b/Assignments/A12BadlyDesignedForm/assignment12.html
@@ -67,7 +67,7 @@
         <form>
             <input class="correct-button" type="button" name="correct-button" value="Right Number" disabled>
             </form>
-        <p>You owe us this much: <strong>$</strong><strong class="lost-money">0</strong></p>
+        <p>You owe this much: <strong>$</strong><strong class="lost-money">0</strong></p>
         <p>You won this much: <strong>$</strong><strong class="gained-money">0</strong></p>
     <p>Kerstin Nyquist</p>
     </body>
