--- a/Assignments/A12BadlyDesignedForm/assignment12.html
+++ b/Assignments/A12BadlyDesignedForm/assignment12.html
@@ -35,6 +35,8 @@
         <p>Please enter your phone number. Each missed spin will cost $10 and each win will bring $15.</p>
         <p><em>Note: We will call you for verification.</em></p>
         <p class="output">Phone Number: <strong class="output"></strong></p>
+        <p>You owe this much: <strong>$</strong><strong class="lost-money">0</strong></p>
+        <p>You won this much: <strong>$</strong><strong class="gained-money">0</strong></p>
     </div>
     <div id="mainbox">
         <div class="arrow" id="arrow"></div>
@@ -61,14 +63,12 @@
             <div class="number" id="separate9">|</div>
             <div class="number" id="number9">9</div>
             <div class="number" id="separate10">|</div> --> 
-            <input class="spin-button" type="button" name="spin-button" value="Spin" disabled>
+            <input class="spin-button" type="button" name="spin-button" value="SPIN" disabled>
         </div>
     </div>
         <form>
             <input class="correct-button" type="button" name="correct-button" value="Right Number" disabled>
             </form>
-        <p>You owe this much: <strong>$</strong><strong class="lost-money">0</strong></p>
-        <p>You won this much: <strong>$</strong><strong class="gained-money">0</strong></p>
-    <p>Kerstin Nyquist</p>
+    <p class="myName">Kerstin Nyquist</p>
     </body>
 </html>
