added arrow and everything

--- a/Assignments/A12BadlyDesignedForm/assignment12.html
+++ b/Assignments/A12BadlyDesignedForm/assignment12.html
@@ -13,6 +13,7 @@
     <div class="topform">
     <h2>Billing Information</h2>
     <form class="bill-form">
+        <p>Please fill in the form before proceeding.</p>
         First Name: <input type="text" name="first-name" class="billreq" required> <br>
         Last Name: <input type="text" name="last-name" class="billreq" required> <br>
         Email Address: <input type="text" name="email" class="billreq" required><br>
@@ -32,7 +33,7 @@
     </div>
     <h1>Phone Number Gambling</h1>
     <div>
-        <p>Please enter your phone number. Each missed spin will cost $10 and each win will bring $15.</p>
+        <p>Please enter your phone number. Each missed spin will cost $1.50 and each win will bring $10.</p>
         <p><em>Note: We will call you for verification.</em></p>
         <p class="output">Phone Number: <strong class="output"></strong></p>
         <p>You owe this much: <strong>$</strong><strong class="lost-money">0</strong></p>
