--- a/forms.html
+++ b/forms.html
@@ -29,6 +29,8 @@
     </nav>
     <h1>Cool Forms</h1>
     <hr>
+    <div class = "centergrid">
+        <div></div>
     <div class="gsetup">
 
         <div class="gallery">
@@ -79,7 +81,7 @@
             <div class="desc">Carlsbad Caverns are a set of dozens of caves in New Mexico. It has stalagmites and stalactites among other formations, and its biggest chamber, "The Big Room," is the biggest in North America.
             </div>
         </div>
-        
+    </div>
     </div>
 </body>
 </html>
