adding to nav bar

--- a/forms.html
+++ b/forms.html
@@ -25,6 +25,7 @@
         <li><a href="animals.html">Animals</a></li>
         <li><a href="forms.html">Forms</a></li>
         <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
+        <li><a href="map/map.html">Map</a></li>
       </ul>
     </nav>
     <h1>Cool Forms</h1>
