--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="animals.html">Animals</a></li>
         <li><a href="forms.html">Forms</a></li>
         <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
+        <li><a href="map/map.html">Map</a></li>
       </ul>
     </nav>
     <main class="grid">
