--- a/map/map.html
+++ b/map/map.html
@@ -29,6 +29,7 @@
     <li><a href="animals.html">Animals</a></li>
     <li><a href="forms.html">Forms</a></li>
     <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
+    <li><a href="map/map.html">Map</a></li>
   </ul>
 </nav>
 <h1>Animal Mascots of Continents</h1>
