--- a/forms.html
+++ b/forms.html
@@ -20,13 +20,14 @@
         <a href="index.html" class="logo">
             <img src="img/NyquistLogo.png" alt="Logo">
         </a>
-    <ul id="navbarlinks">
-        <li><a href="plants.html">Plants</a></li>
-        <li><a href="animals.html">Animals</a></li>
-        <li><a href="forms.html">Forms</a></li>
-        <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
-        <li><a href="map/map.html">Map</a></li>
-      </ul>
+        <ul id="navbarlinks">
+            <li><a href="plants.html">Plants</a></li>
+            <li><a href="animals.html">Animals</a></li>
+            <li><a href="microbes.html">Microbes</a></li>
+            <li><a href="forms.html">Forms</a></li>
+            <li><a href="map/map.html">Map</a></li>
+            <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
+          </ul>
     </nav>
     <h1>Cool Forms</h1>
     <hr>
