--- a/animals.html
+++ b/animals.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/561f9c4dd1.js" crossorigin="anonymous"></script>
@@ -20,13 +20,14 @@
         <a href="index.html" class="logo">
             <img src="img/NyquistLogo.png" alt="Logo">
         </a>
-    <ul id="navbarlinks">
-        <li><a href="plants.html">Plants</a></li>
-        <li><a href="animals.html">Animals</a></li>
-        <li><a href="forms.html">Forms</a></li>
-        <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
-        <li><a href="map/map.html">Map</a></li>
-      </ul>
+        <ul id="navbarlinks">
+          <li><a href="plants.html">Plants</a></li>
+          <li><a href="animals.html">Animals</a></li>
+          <li><a href="microbes.html">Microbes</a></li>
+          <li><a href="forms.html">Forms</a></li>
+          <li><a href="map/map.html">Map</a></li>
+          <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
+        </ul>
     </nav>
     <h1>Cool Animals</h1>
     <hr>
