--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
         <a href="index.html" class="logo">
             <img src="img/NyquistLogo.png" alt="Logo">
         </a>
-    <ul id="navbarlinks">
-        <li><a href="plants.html">Plants</a></li>
-        <li><a href="animals.html">Animals</a></li>
-        <li><a href="forms.html">Forms</a></li>
-        <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
-        <li><a href="map/map.html">Map</a></li>
-      </ul>
+        <ul id="navbarlinks">
+            <li><a href="plants.html">Plants</a></li>
+            <li><a href="animals.html">Animals</a></li>
+            <li><a href="microbes.html">Microbes</a></li>
+            <li><a href="forms.html">Forms</a></li>
+            <li><a href="map/map.html">Map</a></li>
+            <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
+          </ul>
     </nav>
     <main class="grid">
     <div>
@@ -43,11 +44,19 @@
             <div class="caption">
             <p>Lots of these plants have ties to humans, either through consumption or use of their forms.</p>
             <p><a href="plants.html" class="button1">Go</a></p>
-        </div> 
+            </div> 
         </div>
         <div class="col">
             <img src="img/GemsbokAltered.png" alt="Animal Photo" class="indeximg">
             <h2>Animals</h2>
+            <div class="caption">
+                <p>Some have incredible adaptations, and some are just plain cute.</p>
+                <p><a href="animals.html" class="button1">Go</a></p>
+                </div>
+        </div>
+        <div class="col">
+            <img src="img/GemsbokAltered.png" alt="Animal Photo" class="indeximg">
+            <h2>Microbes</h2>
             <div class="caption">
                 <p>Some have incredible adaptations, and some are just plain cute.</p>
                 <p><a href="animals.html" class="button1">Go</a></p>
@@ -60,6 +69,14 @@
             <p>A collection of my favorite gemstones and places with unique formations.</p>
             <p><a href="forms.html" class="button1">Go</a></p>
             </div>
+        </div>
+        <div class="col">
+            <img src="img/GemsbokAltered.png" alt="Animal Photo" class="indeximg">
+            <h2>World Map</h2>
+            <div class="caption">
+                <p>Some have incredible adaptations, and some are just plain cute.</p>
+                <p><a href="animals.html" class="button1">Go</a></p>
+                </div>
         </div>
     </div>
 </main>
