--- a/microbes.html
+++ b/microbes.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/561f9c4dd1.js" crossorigin="anonymous"></script>
-    <title>Plants</title>
+    <title>Microbes</title>
 </head>
 <body>
     <nav>
@@ -20,16 +20,16 @@
         <a href="index.html" class="logo">
             <img src="img/NyquistLogo.png" alt="Logo">
         </a>
-        <ul id="navbarlinks">
-            <li><a href="plants.html">Plants</a></li>
-            <li><a href="animals.html">Animals</a></li>
-            <li><a href="microbes.html">Microbes</a></li>
-            <li><a href="forms.html">Forms</a></li>
-            <li><a href="map/map.html">Map</a></li>
-            <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
-          </ul>
+    <ul id="navbarlinks">
+        <li><a href="plants.html">Plants</a></li>
+        <li><a href="animals.html">Animals</a></li>
+        <li><a href="microbes.html">Microbes</a></li>
+        <li><a href="forms.html">Forms</a></li>
+        <li><a href="map/map.html">Map</a></li>
+        <li><a href="https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
+      </ul>
     </nav>
-    <h1>Cool Plants</h1>
+    <h1>Cool Microbes</h1>
     <hr>
     <div class="gsetup">
 
