finished all of part 1

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                 </div>
         </div>
         <div class="col">
-            <img src="img/GemsbokAltered.png" alt="Animal Photo" class="indeximg">
+            <img src="img/DiatomAltered.png" alt="MIcrobe Photo" class="indeximg">
             <h2>Microbes</h2>
             <div class="caption">
-                <p>Some have incredible adaptations, and some are just plain cute.</p>
+                <p>Intricate cytoskeletons and Earth-altering species.</p>
                 <p><a href="animals.html" class="button1">Go</a></p>
                 </div>
         </div>
@@ -71,10 +71,10 @@
             </div>
         </div>
         <div class="col">
-            <img src="img/GemsbokAltered.png" alt="Animal Photo" class="indeximg">
+            <img src="img/EarthAltered.png" alt="Earth Photo" class="indeximg">
             <h2>World Map</h2>
             <div class="caption">
-                <p>Some have incredible adaptations, and some are just plain cute.</p>
+                <p>Take a look at each country's national animal, income level, and biodiversity rating.</p>
                 <p><a href="animals.html" class="button1">Go</a></p>
                 </div>
         </div>
