--- a/microbes.html
+++ b/microbes.html
@@ -35,49 +35,49 @@
 
         <div class="gallery">
             <div class = "cimg">
-                <img src="img/BaobabTree.jpg" alt="Baobab" class="gimg">
+                <img src="img/spirulina.png" alt="Spirulina" class="gimg">
             </div>
-            <div class="desc">Baobab trees are Madagascar trees that produce nutrient-rich fruit. They are adapted to store water in their trunks during the dry season, and humans have cut hollows in them that can be used as wells for rainwater collection.
-            </div>
-        </div>
-
-        <div class="gallery">
-            <div class="cimg">
-                    <img src="img/AspenTree.jpg" alt="Aspen" class="gimg">
-            </div>
-            <div class="desc">Aspen trees' trunks are capable of photosynthesis, allowing some growth during the winter. They reproduce through "sprouting," where clones of themselves emerge from their roots.
+            <div class="desc">Spirulina are a type of cyanobacteria that many consume for the nutrients it provides, and is considered a superfood. On top of being a great green pigment for biomaterials, its spiral form is quite interesting to observe.
             </div>
         </div>
 
         <div class="gallery">
             <div class="cimg">
-                    <img src="img/Milkweed.jpg" alt="Milkweed" class="gimg">
+                    <img src="img/penicillium.png" alt="Penicillium" class="gimg">
             </div>
-            <div class="desc">Milkweeds have a milky sap in their stems that is bitter and toxic. However, the milky sap, as well as other parts of the plant, have been traditionally used as various medicines and food. Monarch caterpillars rely on the plant.
-            </div>
-        </div>
-
-        <div class="gallery">
-            <div class="cimg">
-                    <img src="img/Ixora.jpg" alt="Ixora" class="gimg">
-            </div>
-            <div class="desc">Ixora have a sweet nectar on their stems that you can suck on. Gently pull the stem from the flower's base.
+            <div class="desc">Penicillium is an ascomycota, a fungi that produces ascospores, is best known for its production of the antibiotic penicillin, which brought huge strides to the medical industry. Apart from this, it is a common bread mold that also serves well in chesse-making.
             </div>
         </div>
 
         <div class="gallery">
             <div class="cimg">
-                    <img src="img/Rambutan.jpg" alt="Rambutan" class="gimg">
+                    <img src="img/NaviculaGeneral.jpg" alt="Navicula" class="gimg">
             </div>
-            <div class="desc">Rambutan is a tropical Asian fruit that is noted for its harmless, hair-like spines called spinterns. The inside resembles lychee with a seed at the center, but it tastes more like a grape.
+            <div class="desc">Navicula are a common diatom, a type of algae found in oceans. They played a critical role in oxygenating Earth's atmosphere in the early stages of life. Navicula are boat-shaped, symmetrical, and are capable of moving across flat surfaces.
             </div>
         </div>
 
         <div class="gallery">
             <div class="cimg">
-                    <img src="img/GiantLilyPads.jpg" alt="Giant Lily Pads" class="gimg">
+                    <img src="img/LamprocyclasMaritalis.png" alt="L. Maritalis" class="gimg">
             </div>
-            <div class="desc">Giant lily pads are capable of carrying a person over water. This is due to their vein structure, which froms "ribs" that trap air underneath it.
+            <div class="desc">Lamprocyclas Maritalis is a radiolarian, which are known to make shells out of silica, or glass, for their forms. A famous taxonomist, Ernst Haeckel, who created magnificent art of Radiolarians, the larger class of Rhizaria, and other living things, as a method of educating the public.
+                </div>
+        </div>
+
+        <div class="gallery">
+            <div class="cimg">
+                    <img src="img/SlimeMold.jpg" alt="Slime Mold" class="gimg">
+            </div>
+            <div class="desc">Slime molds have been difficult to classify for scientists. They have been readily studied for their efficiency in finding food when grouped together, expanding out and then abandoning paths behind that were fruitless with a residue. Their inner fluids pulse quickly, sending information throughout the slime mold as if it has a nervous system.
+            </div>
+        </div>
+
+        <div class="gallery">
+            <div class="cimg">
+                    <img src="img/TMajusBacteria.jpg" alt="Thiovulum majus" class="gimg">
+            </div>
+            <div class="desc">Thiovulum majus bacteria are known for their speed and spinning motility. Physicists have gained interest in them because they often form tight, happenstance crystals when the bacteria spin themselves into stable patterns and shapes.
             </div>
         </div>
 
