finally got the colors to work based on economy

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h2>Microbes</h2>
             <div class="caption">
                 <p>Intricate cytoskeletons and Earth-altering species.</p>
-                <p><a href="animals.html" class="button1">Go</a></p>
+                <p><a href="microbes.html" class="button1">Go</a></p>
                 </div>
         </div>
         <div class="col">
@@ -75,7 +75,7 @@
             <h2>World Map</h2>
             <div class="caption">
                 <p>Take a look at each country's national animal, income level, and biodiversity rating.</p>
-                <p><a href="animals.html" class="button1">Go</a></p>
+                <p><a href="/map/map.html" class="button1">Go</a></p>
                 </div>
         </div>
     </div>
