--- a/map/map.html
+++ b/map/map.html
@@ -35,7 +35,7 @@
       <li><a href="../https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
     </ul>
 </nav>
-<h1>Animal Mascots of Continents</h1>
+<h1>Country Info</h1>
 <hr>
 <div class="mappagegrid">
   <!--<div id="container" class="svg-container">
